--- a/perldoc/ko/perl/5.10/perldebtut.pod
+++ b/perldoc/ko/perl/5.10/perldebtut.pod
@@ -197,9 +197,10 @@ and 'B<S>' shows all subroutines (by pattern) as shown below.
 	DM<3> X ~err
 	FileHandle(stderr) => fileno(2)    
 
-Remember we're in our tiny program with a problem, we should have a look at
-where we are, and what our data looks like. First of all let's view some code 
-at our present position (the first line of code in this case), via 'B<v>':
+문제가 있는 우리의 작은 프로그램을 기억하자.
+우리는 우리가 어디에 있는지, 우리의 데이터가 어떻게 보이는지 봐야한다.
+'B<v>' 명령을 통해 먼저 현재 위치(지금의 경우는 코드의 첫 번째 줄)에서
+코드를 살펴보자:
 
 	DB<4> v
 	1       #!/usr/bin/perl
@@ -213,8 +214,8 @@ at our present position (the first line of code in this case), via 'B<v>':
 	9               'zip' => q(welcome),
 	10      );                                 
 
-At line number 4 is a helpful pointer, that tells you where you are now.  To
-see more code, type 'v' again:
+4 번째 줄에는 우리가 현재 어디에 있는지 알려주는 유용한 포인터가 있다.
+코드를 좀 더 보고 싶다면 'v'를 한번 더 입력한다:
 
 	DB<4> v
 	8               'welcome' => q(Hello World),
@@ -226,22 +227,23 @@ see more code, type 'v' again:
 	14:     print "done: '$data{$key}'\n";
 	15:     exit;      
 
-And if you wanted to list line 5 again, type 'l 5', (note the space):
+그리고 5 번째 줄을 다시 열람하기를 원한다면,
+'l 5'(공백이 있음을 주의하자)를 입력한다:
 
 	DB<4> l 5
 	5:      my %data = (
 
-In this case, there's not much to see, but of course normally there's pages of
-stuff to wade through, and 'l' can be very useful.  To reset your view to the
-line we're about to execute, type a lone period '.':
+이 경우 볼것은 별로 없지만, 보통 헤쳐나가야 할 페이지가 있을 경우
+'l' 은 매우 유용하다.  열람하고 싶은 줄을 실행해야 할 곳으로
+초기화 하고 싶은 경우 마침표 '.' 를 입력한다:
 
 	DB<5> .
 	main::(./data_a:4):     my $key = 'welcome';  
 
-The line shown is the one that is about to be executed B<next>, it hasn't
-happened yet.  So while we can print a variable with the letter 'B<p>', at
-this point all we'd get is an empty (undefined) value back.  What we need to
-do is to step through the next executable statement with an 'B<s>':
+보이는 줄은 아직 실행하지 않은 다음에(B<next>) 실행할 부분이다.
+그렇기 때문에 이 지점에서 'B<p>' 를 이용해서 변수를 출력하면
+빈 값(undefined)을 볼 수 있다.  우리가 해야 할 일은 'B<s>' 명령을
+이용해 다음 실행 가능한 문장으로 한 걸음 나가는(step through) 것이다.
 
 	DB<6> s
 	main::(./data_a:5):     my %data = (
@@ -251,26 +253,24 @@ do is to step through the next executable statement with an 'B<s>':
 	main::(./data_a:9):             'zip' => q(welcome),
 	main::(./data_a:10):    );   
 
-Now we can have a look at that first ($key) variable:
+이제 첫 번째 변수인 $key 값을 보자:
 
 	DB<7> p $key 
 	welcome 
 
-line 13 is where the action is, so let's continue down to there via the letter
-'B<c>', which by the way, inserts a 'one-time-only' breakpoint at the given
-line or sub routine:
+13 번째 줄에서 동작이 있으니 'B<c>' 명령을 이용해서 특정 줄이나 함수까지
+실행하는 '단 한 번의' 정지점을 삽입하자:
 
 	DB<8> c 13
 	All OK
 	main::(./data_a:13):    print "$data{$key}\n";
 
-We've gone past our check (where 'All OK' was printed) and have stopped just
-before the meat of our task.  We could try to print out a couple of variables
-to see what is happening:
+코드는 'All OK'를 출력하는 체크 부분을 지나서 우리의 task 바로 앞에서 멈췄다.
+무슨 일이 벌어지고 있는지 확인하기 위해 몇몇의 변수를 출력해보자:
 
 	DB<9> p $data{$key}
 
-Not much in there, lets have a look at our hash:
+별 다른 것이 없으므로 해시를 통째로 보자:
 
 	DB<10> p %data
 	Hello Worldziptomandwelcomejerrywelcomethisthat 
@@ -278,8 +278,8 @@ Not much in there, lets have a look at our hash:
 	DB<11> p keys %data
 	Hello Worldtomwelcomejerrythis  
 
-Well, this isn't very easy to read, and using the helpful manual (B<h h>), the
-'B<x>' command looks promising:
+이런, 출력물은 그다지 읽기 편하지 않다.
+도움말(B<h h>)을 보면 'B<x>' 명령이 괜찮아 보인다:
 
 	DB<12> x %data
 	0  'Hello World'
@@ -293,10 +293,9 @@ Well, this isn't very easy to read, and using the helpful manual (B<h h>), the
 	8  'this'
 	9  'that'     
 
-That's not much help, a couple of welcomes in there, but no indication of
-which are keys, and which are values, it's just a listed array dump and, in
-this case, not particularly helpful.  The trick here, is to use a B<reference>
-to the data structure:
+이것은 그다지 도움이 되지 않는다. welcome의 쌍이 있지만 키와 값을 구분할
+수 없다. 이것은 그저 배열의 덤프를 나열한 것일 뿐이고, 이 경우 별로
+유용하지 않다. 여기서 비결은 B<reference>를 사용하는 것이다:
 
 	DB<13> x \%data
 	0  HASH(0x8194bc4)
@@ -306,31 +305,30 @@ to the data structure:
 	   'tom' => 'and'
 	   'welcome' => undef  
 
-The reference is truly dumped and we can finally see what we're dealing with. 
-Our quoting was perfectly valid but wrong for our purposes, with 'and jerry'
-being treated as 2 separate words rather than a phrase, thus throwing the
-evenly paired hash structure out of alignment.
+레퍼런스는 정말로 덤프를 수행하고, 이제야 우리가 다루는 것을 볼 수 있다.
+인용을 하는 부분은 완벽하게 유효했지만 우리의 목적으로 비추었을때 틀렸다.
+'and jerry' 를 하나의 구로 다룬 것이 아니라 두 개의 단어로 다루었기 때문에
+정렬되지 않은 evenly paired 해시 구조를 생성했다.
 
-The 'B<-w>' switch would have told us about this, had we used it at the start,
-and saved us a lot of trouble: 
+시작할 때 'B<-w>' 스위치를 이용하면 이 문제에 대해 알려주며,
+골치 아픈 많은 부분을 해결할 수 있다:
 
 	> perl -w data
 	Odd number of elements in hash assignment at ./data line 5.    
 
-We fix our quoting: 'tom' => q(and jerry), and run it again, this time we get
-our expected output:
+인용 부분을 고쳐보자: 'tom' => q(and jerry)
+다시 실행하면, 원했던 결과물을 얻을 수 있다:
 
 	> perl -w data
 	Hello World
 
 
-While we're here, take a closer look at the 'B<x>' command, it's really useful
-and will merrily dump out nested references, complete objects, partial objects
-- just about whatever you throw at it:
+여기까지 왔지만, 'B<x>' 명령에 대해 좀 더 자세히 알아보자.
+이 명령은 정말 유용하고, 중첩 레퍼런스와 완전한 객체, 부분 객체 등
+원하는 모든 것을 유쾌하게 덤프할 수 있다.
 
-Let's make a quick object and x-plode it, first we'll start the debugger:
-it wants some form of input from STDIN, so we give it something non-committal,
-a zero:
+이제 간단한 객체를 만들고 폭발시켜 보자.  먼저 디버거를 실행하자:
+STDIN 의 입력을 원하므로 non-committal인 무언가, 즉 0을 주도록 하자:
 
 	> perl -de 0
 	Default die handler restored.
@@ -342,12 +340,12 @@ a zero:
 
 	main::(-e:1):   0                       
 
-Now build an on-the-fly object over a couple of lines (note the backslash):
+지금부터 몇 줄에 걸쳐(역슬래쉬 기호를 주의한다) 즉석에서 객체를 만들자:
 
 	DB<1> $obj = bless({'unique_id'=>'123', 'attr'=> \
 	cont: 	{'col' => 'black', 'things' => [qw(this that etc)]}}, 'MY_class')
 
-And let's have a look at it:
+이제 이 객체를 살펴보자:
 
   	DB<2> x $obj
 	0  MY_class=HASH(0x828ad98)
@@ -360,8 +358,8 @@ And let's have a look at it:
    		'unique_id' => 123       
   	DB<3>
 
-Useful, huh?  You can eval nearly anything in there, and experiment with bits
-of code or regexes until the cows come home:
+유용한가, 흠?  여러분은 언제든지 그 안에 있는 거의 모든 것을
+eval 할 수 있고 정규 표현식이나 코드의 일부를 실험할 수 도 있다:
 
 	DB<3> @data = qw(this that the other atheism leather theory scythe)
 
@@ -374,7 +372,7 @@ of code or regexes until the cows come home:
 	theory  
 	saw -> 6
 
-If you want to see the command History, type an 'B<H>':
+입력한 명령들의 히스토리를 보고 싶다면 'B<H>' 명령을 이용한다:
 
 	DB<5> H
 	4: p 'saw -> '.($cnt += map { print "\t:\t$_\n" } grep(/the/, sort @data))
@@ -384,7 +382,7 @@ If you want to see the command History, type an 'B<H>':
 	{'col' => 'black', 'things' => [qw(this that etc)]}}, 'MY_class')
 	DB<5>
 
-And if you want to repeat any previous command, use the exclamation: 'B<!>':
+이전의 명령을 반복하고 싶다면 느낌표 기호 'B<!>'를 이용한다:
 
 	DB<5> !4
 	p 'saw -> '.($cnt += map { print "$_\n" } grep(/the/, sort @data))
@@ -396,7 +394,7 @@ And if you want to repeat any previous command, use the exclamation: 'B<!>':
 	theory  
 	saw -> 12
 
-For more on references see L<perlref> and L<perlreftut>
+더 많은 정보를 찾기 위해서 L<perlref>와 L<perlreftut> 를 참조하라. 
 
 
 =head1 Stepping through code
