Edited wiki page through web user interface.

--- a/wiki/TranslationGuide.wiki
+++ b/wiki/TranslationGuide.wiki
@@ -25,5 +25,5 @@
 = 번역 가이드 =  
  * 원문 문서가 en, jp에 저장되기 때문에 번역을 하실때는 굳이 원문을 남기시 않으셔도 되고 원문을 남기실 경우에는 기존 문단구조가 그대로 유지되도록 빈줄을 새로 삽입하지만 않으시면 됩니다.
  * 번역체는 평문을 사용합니다.
- * 번역을 위한 단어집은 이곳을 참고하세요
+ * 번역을 위한 용어집은 PerlTerms 를 참고하세요
  * 번역에 대한 이슈들은 이곳을 참고하세요
